@@ -1,3 +1,8 @@
+2010-07-13  Levi Bard <levi@unity3d.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorView.cs:
+	  Also respond to FileService events.
+
 2010-07-13  Mike Krüger  <mkrueger@novell.com>
 
 	* Makefile.am:
